# rust

browser_engine/: Cargo.toml
browser_engine/example/: example.html  example1.css
browser_engine/src/: commands.rs  css.rs  dom.rs  html_parse.rs  layout.rs  lib.rs  render.rs  style.rs
chat-app/: Cargo.toml
chat-app/assets/: index.html
chat-app/src/: main.rs
code-counter/: Cargo.toml
code-counter/src/: config.rs  main.rs
crud-server/: Cargo.toml
crud-server/src/: db.rs  errors.rs  main.rs  models.rs
crud-server/src/db/: database.rs
crud-server/src/errors/: todo_error.rs
crud-server/src/models/: todo.rs
incomeapp/: Cargo.toml
incomeapp/src/: main.rs
incomeapp/ui/: appwindow.slint
iterators/src/: flatten.rs  main.rs
progress/src/: main.rs
server/src/: 404.html  index.html  lib.rs  main.rs
snake/src/: draw.rs  game.rs  main.rs  snake.rs
sorting/: Cargo.toml
sorting/src/: bubblesort.rs  insertionsort.rs  lib.rs  mergesort.rs  quicksort.rs  selectionsort.rs
