[package]
name = "browser_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.14.1"
gfx_text = "0.16.0"
gfx_window_glutin = "0.15.0"
glutin = "0.7.1"

[[bin]]
name= "main"
path = "bin/main.rs"
