[package]
name = "crud-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
dotenvy = "0.15.7"
libsql = "0.4.0"
shuttle-actix-web = "0.46.0"
shuttle-runtime = "0.46.0"
tokio = "1.26.0"
serde = { version = "1.0.148", features = ["derive"] }
actix-cors = "0.7.0"
validator = { version = "0.16.1", features = ["derive"] }
derive_more = "0.99.0"
